--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,23 @@
 /TetseGitHub/nbproject/private/
+/VerificadorIdadeSwing/nbproject/private/
+/VerificadorIdadeSwing/build/
+/ProgramaMedia/nbproject/private/
+/ProgramaMedia/build/
+/ProgramaIdade/nbproject/private/
+/ProgramaIdade/build/
+/ProgramaParImparSwing/nbproject/private/
+/ProgramaParImparSwing/build/
+/VotacaoSwing/nbproject/private/
+/VotacaoSwing/build/
+/QuantidadeDePernas/nbproject/private/
+/QuantidadeDePernas/build/
+/Contador01/nbproject/private/
+/Contador01/build/
+/Contador02/nbproject/private/
+/Contador02/build/
+/Contador03/nbproject/private/
+/Contador03/build/
+/Contador04/nbproject/private/
+/Contador04/build/
+/ProgramaParImparSENAI/nbproject/private/
+/ProgramaParImparSENAI/build/
