Estrutura de repetição 'for'

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,5 @@
 /Contador04/build/
 /ProgramaParImparSENAI/nbproject/private/
 /ProgramaParImparSENAI/build/
+/Contador05/nbproject/private/
+/Contador05/build/
