--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,9 @@
 /ProgramaParImparSENAI/build/
 /Contador05/nbproject/private/
 /Contador05/build/
+/Contador06/nbproject/private/
+/Contador06/build/
+/Vetor01/nbproject/private/
+/Vetor01/build/
+/Vetor02/nbproject/private/
+/Vetor02/build/
