--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,18 @@
 /Vetor01/build/
 /Vetor02/nbproject/private/
 /Vetor02/build/
+/Vetor03/nbproject/private/
+/Vetor03/build/
+/Vetor04/nbproject/private/
+/Vetor04/build/
+/Vetor05/nbproject/private/
+/Vetor05/build/
+/Vetor06/nbproject/private/
+/Vetor06/build/
+/TesteFuncao01/nbproject/private/
+/TesteFuncao01/build/
+/TesteFuncao02/nbproject/private/
+/TesteFuncao02/build/
+/TesreFuncao03/nbproject/private/
+/TesteFuncao03/nbproject/private/
+/TesteFuncao03/build/
