--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,8 @@
 /TesreFuncao03/nbproject/private/
 /TesteFuncao03/nbproject/private/
 /TesteFuncao03/build/
+/TesteCeV/nbproject/private/
+/TesteCeV/build/
+/ProgramaTriangulo/nbproject/private/
+/ProgramaTriangulo/build/
+/JavaApplication35/nbproject/private/
