--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,7 @@
 /ProgramaTriangulo/nbproject/private/
 /ProgramaTriangulo/build/
 /JavaApplication35/nbproject/private/
+/NumerosInteirosDe1a100/nbproject/private/
+/NumerosInteirosDe1a100/build/
+/MediaEntre2Numeros/nbproject/private/
+/MediaEntre2Numeros/build/
