--- a/MediaEntre2Numeros/nbproject/project.properties
+++ b/MediaEntre2Numeros/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/JavaApplication35.jar
+dist.jar=${dist.dir}/MediaEntre2Numeros.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/JavaApplication35
+dist.jlink.output=${dist.jlink.dir}/MediaEntre2Numeros
 excludes=
 includes=**
 jar.compress=false
@@ -70,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=JavaApplication35
-main.class=javaapplication35.JavaApplication35
+jlink.launcher.name=MediaEntre2Numeros
+main.class=mediaentre2numeros.MediaEntre2Numeros
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
