--- a/.gitignore
+++ b/.gitignore
@@ -135,3 +135,7 @@
 /P.O.O Java/Aula05/nbproject/private/
 /P.O.O Java/Aula05/build/
 /P.O.O Java/ObjetosBanco/nbproject/private/
+/P.O.O Java/ObjetosBanco/build/
+/P.O.O Java/Aula06/nbproject/private/
+/P.O.O Java/Aula06/build/
+/P.O.O Java/RelacionamentoEntreClasses/nbproject/private/
