--- a/.gitignore
+++ b/.gitignore
@@ -139,3 +139,4 @@
 /P.O.O Java/Aula06/nbproject/private/
 /P.O.O Java/Aula06/build/
 /P.O.O Java/RelacionamentoEntreClasses/nbproject/private/
+/P.O.O Java/RelacionamentoEntreClasses/build/
